--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -1,19 +1,20 @@
 .profile {
-    color: #8c9aa8;
-    text-align: center;
-    border: 1px solid rgb(232, 236, 242);
-    border-radius: 2px;
-    width: 390px;
-    box-shadow: dimgray;
-    margin: 10px;
-    .avatar {
-        height: 159px;
-        margin: 46px 0 16px;
-        border-radius: 100px;
-    }
-    .name {
-        font-size: 28px;
-        font-weight: 600;
-        color: darkslategray;
-    } 
+  color: #8c9aa8;
+  text-align: center;
+  border: 1px solid rgb(232, 236, 242);
+  border-radius: 2px;
+  width: 390px;
+  box-shadow: dimgray;
+  margin: 0 auto;
+  justify-content: center;
+  .avatar {
+    height: 159px;
+    margin: 46px 0 16px;
+    border-radius: 100px;
+  }
+  .name {
+    font-size: 28px;
+    font-weight: 600;
+    color: darkslategray;
+  }
 }
