--- a/src/components/FriendsList/FriendsListItem.module.scss
+++ b/src/components/FriendsList/FriendsListItem.module.scss
@@ -1,18 +1,19 @@
 .item {
-    display: flex;
-    width: 200px;
-    margin-bottom: 7px;
-    border-radius: 1px;
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    .status {
+  margin: 0 auto;
+  display: flex;
+  width: 200px;
+  margin-bottom: 7px;
+  border-radius: 1px;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  .status {
     width: 5px;
     height: 5px;
     border-radius: 20px;
     .online {
-        background-color: green;
+      background-color: green;
     }
     .offline {
-        background-color: red;
-        }
+      background-color: red;
     }
+  }
 }
