--- a/src/components/Statistics/Statistics.module.scss
+++ b/src/components/Statistics/Statistics.module.scss
@@ -1,29 +1,29 @@
 .statistics {
-    text-align: center;
-.title {
+  text-align: center;
+  .title {
     font-weight: 700;
     text-transform: uppercase;
     color: grey;
-}
-.statList {
+  }
+  .statList {
     padding: 0;
     margin: 0 auto;
     display: flex;
     width: 500px;
-.item {
-    color: #e9e9e9;
-    list-style: none;
-    border: 1px solid rgb(232, 236, 242);
-    padding-top: 10px;
-    height: 80px;
-    width: 100%;
-    line-height: 1.5;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-.percentage {
-    font-size: 22px;
+    .item {
+      color: #353232;
+      list-style: none;
+      border: 1px solid rgb(232, 236, 242);
+      padding-top: 10px;
+      height: 80px;
+      width: 100%;
+      line-height: 1.5;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
     }
-}
+    .percentage {
+      font-size: 22px;
+    }
+  }
 }
