--- a/src/components/Transactions/Transactions.module.scss
+++ b/src/components/Transactions/Transactions.module.scss
@@ -1,23 +1,22 @@
 .transactionHistory {
-    width: 800px;
-    height: 1000px;
-    text-align: center;
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 10px;
+  width: 800px;
+  height: 1000px;
+  text-align: center;
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin: 0 auto;
 }
 .thead {
-    background-color: mediumturquoise;
-    color: grey;
-    height: 50px;
-    text-transform: uppercase;
+  background-color: mediumturquoise;
+  color: grey;
+  height: 50px;
+  text-transform: uppercase;
 }
 .tbody {
-    color: grey;
-.grey {
-   background-color: lightgray;
-}
-.white {
-    
+  color: grey;
+  .grey {
+    background-color: lightgray;
+  }
+  .white {
     background-color: white;
-}
+  }
 }
