--- a/src/components/Transactions/Transactions.module.scss
+++ b/src/components/Transactions/Transactions.module.scss
@@ -6,7 +6,7 @@
   margin: 0 auto;
 }
 .thead {
-  background-color: mediumturquoise;
+  background-color: rgb(34, 156, 152);
   color: grey;
   height: 50px;
   text-transform: uppercase;
